# codesense-ai

./: .gitignore  README.md  bug.py  pyproject.toml  railway.json  requirements.txt  streamlit_app.py  test2.py  test_code.py  test_review.py  testt_code.py  user_service.py
notebooks/: codesense_kaggle.ipynb
src/codesense/: __init__.py
src/codesense/api/: __init__.py  app.py
src/codesense/cli/: __init__.py  app.py
src/codesense/core/: __init__.py  analyzer.py  detector.py
src/codesense/github/: __init__.py  client.py  webhook.py
src/codesense/llm/: __init__.py  client.py  prompts.py
src/codesense/models/: __init__.py
src/codesense/utils/: __init__.py  config.py
